--- a/css/style.css
+++ b/css/style.css
@@ -9,45 +9,118 @@
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
 body {
   font-family: "Roboto", sans-serif;
-}
-
-.header,
-.footer {
-  /* background-color: #1f2937; */
-}
-
-main {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
+
+/* TYPOGRAPHY AND TEXT STUFF */
+h1 {
+  font-size: 48px;
+  font-weight: 900;
+  color: #f9faf8;
+}
+
+.header h2 {
+  font-size: 24px;
+  color: #f9faf8;
+}
+
+.header a,
+.hero-area p {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+/* TYPOGRAPHY AND TEXT STUFF */
 
 /* HEADER */
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-around;
+  height: 72px;
   background-color: #1f2937;
-  height: 50px;
-  flex-shrink: 0;
 }
 
-.header h2 {
-  color: #f9faf8;
-  font-size: 24px;
-}
-
-.header ul {
+.header-left {
   display: flex;
-  list-style: none;
+  width: 450px;
+  justify-content: flex-start;
+}
+
+.header-links {
+  display: flex;
+  width: 450px;
+  justify-content: flex-end;
+}
+
+.header-links ul {
+  display: flex;
   gap: 25px;
 }
-
-.header a {
-  text-decoration: none;
-  color: #e5e7eb;
-  font-size: 18px;
-}
 /* HEADER */
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+/* HERO AREA */
+.hero-area {
+  background-color: #1f2937;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.intro {
+  width: 450px;
+  height: 225px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.intro button {
+  margin-top: auto;
+  flex: none;
+  width: auto;
+  font-size: 16px;
+  padding: 8px 30px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #3882f6;
+  color: #f9faf8;
+}
+
+.image-holder {
+  width: 450px;
+  height: 225px;
+  display: flex;
+  overflow: hidden;
+  background-color: gray;
+}
+
+.image-holder img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* HERO AREA */
