--- a/css/style.css
+++ b/css/style.css
@@ -122,5 +122,54 @@ main {
   object-fit: cover;
   object-position: center;
 }
-
 /* HERO AREA */
+
+/* INFORMATION AREA */
+.information {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.information h2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 35px 0;
+}
+
+.blocks {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+.img-block img {
+  width: 150px;
+  height: 150px;
+  background-color: white;
+  border-radius: 12px;
+  border: 3px solid black;
+  object-fit: cover;
+  object-position: center;
+  margin-bottom: 15px;
+}
+
+.img-block {
+  display: flex;
+  width: 150px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+
+.img-text {
+  display: flex;
+  flex-wrap: wrap;
+}
+/* INFORMATION AREA */
