--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,49 @@ h1 {
   font-size: 18px;
   color: #e5e7eb;
 }
+
+.header a:hover {
+  text-decoration: underline;
+}
+
+.information h2 {
+  font-size: 36px;
+  font-weight: 900;
+  color: #1f2937;
+}
+
+.quote-text {
+  font-size: 36px;
+  font-weight: 300;
+  color: #1f2937;
+}
+
+.author {
+  font-size: 16px;
+  font-weight: 900;
+  color: black;
+}
+
+.locations {
+  font-weight: 900;
+}
+
+.signup-info {
+  color: #f9faf8;
+}
+
+.footer p,
+.footer a {
+  color: grey;
+}
+
+.footer-links {
+  color: #e5e7eb;
+}
+
+.footer-links:hover {
+  text-decoration: underline;
+}
 /* TYPOGRAPHY AND TEXT STUFF */
 
 /* HEADER */
@@ -95,12 +138,16 @@ main {
   flex-wrap: wrap;
 }
 
+.intro p {
+  margin-top: 2px;
+}
+
 .intro button {
   margin-top: auto;
   flex: none;
   width: auto;
   font-size: 16px;
-  padding: 8px 30px;
+  padding: 6px 30px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -126,7 +173,7 @@ main {
 
 /* INFORMATION AREA */
 .information {
-  height: 400px;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -155,7 +202,7 @@ main {
   border: 3px solid black;
   object-fit: cover;
   object-position: center;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .img-block {
@@ -173,3 +220,80 @@ main {
   flex-wrap: wrap;
 }
 /* INFORMATION AREA */
+
+/* QUOTE AREA */
+.quote-container {
+  height: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #e5e7eb;
+}
+
+.quote-text {
+  width: 800px;
+}
+
+.author {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
+/* QUOTE AREA */
+
+/* SIGNUP SECTION */
+.signup-container {
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.signup {
+  background-color: #3882f6;
+  width: 900px;
+  height: 150px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.signup-info {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.signup-btn {
+  display: flex;
+  justify-content: center;
+}
+
+.signup-btn button {
+  margin-top: auto;
+  flex: none;
+  width: auto;
+  font-size: 16px;
+  padding: 6px 30px;
+  border: 2px solid white;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: #3882f6;
+  color: #f9faf8;
+}
+/* SIGNUP SECTION */
+
+/* FOOTER */
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  height: 72px;
+  background-color: #1f2937;
+}
+/* FOOTER */
